[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitor-members"
dynamic = ["version"]

requires-python = ">=3.9.0"
dependencies = [
    "coloredlogs~=15.0.1",
    "koda-validate~=4.2.0",
    "requests~=2.32.3",
    "sqlalchemy[mypy]~=2.0.35",
    "tomli~=2.0.2",
    "typing_extensions>=4.0",
    "typed-argparse~=0.3.1",
]

[tool.mypy]
mypy_path = "typings"

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "C90",     # mccabe
    "COM",     # Commmas
    "CPY",     # missing-copyright-notice
    "D",       # Docstrings
    "DTZ",     # flake8-datetimez
    "EM",      # flake8-errmsg
    "PLR09",   # pylint: too-many-*
    "PLR1702", # pylint: too-many-nested-blocks
    "PLR2004", # pylint: magic-value-comparison
    "PLW2901", # pylint: redefined-loop-name
    "RET",     # flake8-return
    "T201",    # flake8-print
    "T203",    # flake8-print
    "TRY",     # tryceratops
    "ISC001",  # conflicts with formatter
    # Try to avoid TYPE_CHECKING blocks to unify runtime/typechecking logic
    "TC001", # typing-only-first-party-import
    "TC002", # typing-only-third-party-import
    "TC003", # typing-only-standard-library-import
]

[project.scripts]
monitor_members = "monitor_members.__main__:main_w"

[tool.hatch.version]
path = "src/monitor_members/__init__.py"

[tool.uv]
reinstall-package = ["paleomix"]

[dependency-groups]
dev = ["nox>=2024.10.9"]
