[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monitor-members"
dynamic = ["version"]

requires-python = ">=3.9.0"
dependencies = [
    "coloredlogs~=15.0.1",
    "koda-validate~=4.2.0",
    "requests~=2.32.3",
    "sqlalchemy[mypy]~=2.0.35",
    "tomli~=2.0.2",
    "typing_extensions>=4.0",
    "typed-argparse~=0.3.1",
]

[tool.mypy]
mypy_path = "typings"

[project.scripts]
monitor_members = "monitor_members.__main__:main_w"

[tool.hatch.version]
path = "src/monitor_members/__init__.py"

[tool.uv]
reinstall-package = ["paleomix"]

[dependency-groups]
dev = ["nox>=2024.10.9"]
